hlvm/test/invalid/badchar.hlx
<?xml version="1.0" encoding="UTF-8"?>
<hlvm xmlns="http://hlvm.org/src/hlvm/Reader/XML/HLVM.rng" pubid="http://hlvm.org/src/hlvm/test/invalid/badbin.hlx">
  <bundle id="badbin">
    <constant id="aListValue" type="char">
      <char>#***</char>
    </constant>
  </bundle>
</hlvm>
